[project]
name = "db-mcp"
version = "0.2.0"
description = "MySQL数据库对接的MCP服务器 (支持 HTTP/SSE/STDIO 多种传输模式)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.1",
    "aiomysql>=0.2.0",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "kvstore>=0.1.0",
    "sqllineage>=1.5.0",
]

[project.scripts]
db-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "config.py", "database.py", "cache.py", "middleware.py", "lineage.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]